Fix the white space issue for inline-block

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -47,6 +47,7 @@ button {
 }
 #banner_information {
   border: 0px solid;
+  font-size: 0;
 }
 #banner_information > section {
   display: inline-block;
@@ -54,6 +55,7 @@ button {
   height: 520px;
   min-width: 550px;
   padding-top: 60px;
+  font-size: 16px;
   vertical-align: top;
 }
 
@@ -70,7 +72,7 @@ button {
   color: #fff;
 }
 #banner_information_quick_id_tb tr td {
-  line-height: 32px;
+  line-height: 28px;
   vertical-align: text-top;
 }
 
